# otusCppAssignments

./: .gitmodules  CMakeLists.txt  README.md  analyze.cpp  max.cpp  statFunctions.h  std.cpp
.github/workflows/: release.yml
CICD/: CMakeLists.txt
CICD/.github/workflows/: release.yml
guessNumberAssignment/: CMakeLists.txt  readme.md
guessNumberAssignment/lib/: CMakeLists.txt  loadScore.cpp  saveScore.cpp  scores.h  viewScore.cpp
guessNumberAssignment/src/: CMakeLists.txt  compare.cpp  compare.h  getComparsionMessage.cpp  getComparsionMessage.h  getGuessNumber.cpp  getGuessNumber.h  guessNumber.cpp
physicsAssignment/: Ball.cpp  Ball.hpp  Color.hpp  Physics.cpp  Point.hpp  World.cpp
statisticsAssignment/: CMakeLists.txt  analyze.cpp  max.cpp  mean.cpp  min.cpp  pct.cpp
